--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,3 +1,4 @@
+<script src="popup.js"></script>
 <input id="projectId" placeholder="Project ID" />
 <input id="modelId" placeholder="Model ID (e.g. gemini-1.5-flash)" />
 <input id="accessToken" placeholder="Access Token (OAuth Bearer)" />
